--- a/M6_Starter_Code 2/retrieve_movie_data.ipynb
+++ b/M6_Starter_Code 2/retrieve_movie_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,16 @@
     "begin_date = \"20130101\"\n",
     "end_date = \"20230531\"\n",
     "\n",
-    "# Build URL\n"
+    "# Build URL\n",
+    "# queryURL = url + 'begin_date=20130101&end_date=20230531&fl=headline%2Cweb_url%2Csnippet%2Csource%2Ckeywords%2Cpub_date%2Cbyline%2Cword_count&fq=section_name%3A%22Movies%22%20AND%20type_of_material%3A%22Review%22%20AND%20headline%3A%22love%22&sort=newest&' + nyt_api_key\n",
+    "parameters = {\n",
+    "    \"api-key\": nyt_api_key,\n",
+    "    \"fq\": filter_query,\n",
+    "    \"fl\": field_list,\n",
+    "    \"sort\": sort,\n",
+    "    \"begin_date\": begin_date,\n",
+    "    \"end_date\": end_date\n",
+    "}"
    ]
   },
   {
@@ -104,28 +113,33 @@
    ],
    "source": [
     "# Create an empty list to store the reviews\n",
-    "\n",
+    "reviews_list = []\n",
     "\n",
     "# loop through pages 0-19\n",
+    "for i in range(20)\n",
     "\n",
     "    # create query with a page number\n",
     "    # API results show 10 articles at a time\n",
-    "\n",
+    "    parameters[\"page\"] = i\n",
     "    \n",
     "    # Make a \"GET\" request and retrieve the JSON\n",
-    "\n",
+    "    reviews = requests.get(url, params=parameters).json()\n",
     "    \n",
     "    # Add a twelve second interval between queries to stay within API query limits\n",
-    "\n",
+    "    time.sleep(12)\n",
     "    \n",
     "    # Try and save the reviews to the reviews_list\n",
-    "\n",
+    "    try:\n",
     "        # loop through the reviews[\"response\"][\"docs\"] and append each review to the list\n",
-    "\n",
+    "        for review in reviews[\"response\"][\"docs\"]:\n",
+    "            reviwes_list.append(review)\n",
     "        # Print the page that was just retrieved\n",
+    "        print(f\"Page {i} retrieved\")\n",
     "\n",
-    "\n",
-    "        # Print the page number that had no results then break from the loop\n"
+    "        # Print the page number that had no results then break from the loop\n",
+    "        except Exception as e:\n",
+    "            print(f\"{e}\" + \" error with page \" + f\"{parameters['page']}\" + \". Breaking loop...\")\n",
+    "            break        "
    ]
   },
   {
@@ -440,7 +454,8 @@
    ],
    "source": [
     "# Preview the first 5 results in JSON format\n",
-    "# Use json.dumps with argument indent=4 to format data\n"
+    "# Use json.dumps with argument indent=4 to format data\n",
+    "print(json.dumps(reviews_list[:5], indent=4))"
    ]
   },
   {
@@ -829,7 +844,9 @@
     }
    ],
    "source": [
-    "# Convert reviews_list to a Pandas DataFrame using json_normalize()\n"
+    "# Convert reviews_list to a Pandas DataFrame using json_normalize()\n",
+    "movie_data = pd.json_normalize(reviews_list)\n",
+    "movie_data.head()"
    ]
   },
   {
@@ -1246,7 +1263,10 @@
     "# Extract the title from the \"headline.main\" column and\n",
     "# save it to a new column \"title\"\n",
     "# Title is between unicode characters \\u2018 and \\u2019. \n",
-    "# End string should include \" Review\" to avoid cutting title early\n"
+    "# End string should include \" Review\" to avoid cutting title early\n",
+    "movie_data[\"title\"] = movieData[\"headline.main\"].apply(lambda st: st[st.find(\"\\u2018\")+1:st.find(\"\\u2019 Review\")])\n",
+    "movie_data\n",
+    "\n"
    ]
   },
   {
@@ -1670,7 +1690,10 @@
     "        extracted_keywords += keyword\n",
     "    return extracted_keywords\n",
     "\n",
-    "# Fix the \"keywords\" column by converting cells from a list to a string\n"
+    "# Fix the \"keywords\" column by converting cells from a list to a string\n",
+    "movie_data[\"keywords\"] = movie_data[\"keywords\"].apply(extract_keywords)\n",
+    "\n",
+    "movie_data\n"
    ]
   },
   {
@@ -1892,7 +1915,9 @@
    ],
    "source": [
     "# Create a list from the \"title\" column using to_list()\n",
-    "# These titles will be used in the query for The Movie Database\n"
+    "# These titles will be used in the query for The Movie Database\n",
+    "titles = movie_data[\"title\"].tolist()\n",
+    "print(titles)"
    ]
   },
   {
@@ -2131,50 +2156,69 @@
    ],
    "source": [
     "# Create an empty list to store the results\n",
-    "\n",
+    "tmdb_Movies_List = []\n",
     "\n",
     "# Create a request counter to sleep the requests after a multiple\n",
     "# of 50 requests\n",
-    "\n",
+    "request_counter = 1\n",
     "\n",
     "# Loop through the titles\n",
-    "\n",
+    "for title in titles:\n",
     "    # Check if we need to sleep before making a request\n",
-    "\n",
+    "    if request_counter % 50 == 0:\n",
+    "        print(\"Sleeping for 12 seconds\")\n",
+    "        time.sleep(12)\n",
     "\n",
     "    # Add 1 to the request counter\n",
-    "\n",
+    "    request_counter += 1\n",
     "    \n",
     "    # Perform a \"GET\" request for The Movie Database\n",
+    "    searchResults = requests.get(url + title + tmdb_key_string).json()\n",
     "\n",
     "\n",
     "    # Include a try clause to search for the full movie details.\n",
     "    # Use the except clause to print out a statement if a movie\n",
     "    # is not found.\n",
-    "\n",
+    "    try:\n",
     "        # Get movie id\n",
-    "\n",
+    "        movieID = str(searchResults[\"results\"][0][\"id\"])\n",
     "\n",
     "        # Make a request for a the full movie details\n",
     "\n",
     "\n",
     "        # Execute \"GET\" request with url\n",
+    "        movie = requests.get(\"https://api.themoviedb.org/3/movie/\" + movieID + \"?api_key=\" + tmdb_api_key).json()\n",
     "\n",
     "        \n",
     "        # Extract the genre names into a list\n",
-    "\n",
+    "        movie_genres = [genre[\"name\"] for genre in movie[\"genres\"]]\n",
     "\n",
     "        # Extract the spoken_languages' English name into a list\n",
-    "\n",
+    "        movie_languages = [language[\"english_name\"] for language in movie[\"spoken_languages\"]]\n",
     "\n",
     "        # Extract the production_countries' name into a list\n",
+    "        movie_production_countries = movie[\"production_countries\"][0][\"name\"]\n",
     "\n",
-    "\n",
-    "        # Add the relevant data to a dictionary and\n",
+    "        # Add the relevant data to a dictionary \n",
+    "        movie_dict = {\n",
+    "            \"title\": movie[\"title\"],\n",
+    "            \"release_date\": movie[\"release_date\"],\n",
+    "            \"runtime\": movie[\"runtime\"],\n",
+    "            \"genres\": movie_genres,\n",
+    "            \"spoken_languages\": movie_languages,\n",
+    "            \"production_countries\": movie_production_countries\n",
+    "        }\n",
+    "        # and\n",
     "        # append it to the tmdb_movies_list list\n",
+    "        tmdb_Movies_List.append(data)\n",
     "\n",
     "        \n",
     "        # Print out the title that was found\n",
+    "        print(f\"Found {title}.\")\n",
+    "    except: Exception as e:\n",
+    "        # Print out the title that was not found\n",
+    "        print(f\"{title} not found.\")\n",
+    "        print(e)\n",
     "\n"
    ]
   },
@@ -2319,7 +2363,8 @@
    ],
    "source": [
     "# Preview the first 5 results in JSON format\n",
-    "# Use json.dumps with argument indent=4 to format data\n"
+    "# Use json.dumps with argument indent=4 to format data\n",
+    "print(json.dumps(tmdb_Movies_List[:5], indent=4))"
    ]
   },
   {
@@ -2657,7 +2702,9 @@
     }
    ],
    "source": [
-    "# Convert the results to a DataFrame\n"
+    "# Convert the results to a DataFrame\n",
+    "tmdb_Movie_Data = pd.DataFrame(tmdb_movies_list)\n",
+    "tmdb_Movie_Data\n"
    ]
   },
   {
@@ -3115,7 +3162,9 @@
     }
    ],
    "source": [
-    "# Merge the New York Times reviews and TMDB DataFrames on title\n"
+    "# Merge the New York Times reviews and TMDB DataFrames on title\n",
+    "merged_df = pd.merge(movieData, tmdbMovieData, on=\"title\")\n",
+    "merged_df"
    ]
   },
   {
@@ -3361,20 +3410,23 @@
    "source": [
     "# Remove list brackets and quotation marks on the columns containing lists\n",
     "# Create a list of the columns that need fixing\n",
-    "\n",
+    "columns_to_fix = [\"genres\", \"spoken_languages\", \"production_countries\"]\n",
     "\n",
     "# Create a list of characters to remove\n",
-    "\n",
+    "characters_to_remove = [\"[\", \"]\", \"'\"]\n",
     "\n",
     "# Loop through the list of columns to fix\n",
-    "\n",
+    "for column in columns_to_fix:\n",
     "    # Convert the column to type 'str'\n",
-    "\n",
+    "    merged_df[column] = merged_df[column].astype(str)\n",
     "\n",
     "    # Loop through characters to remove\n",
+    "    for character in characters_to_remove:\n",
+    "        # Remove the character from the column\n",
+    "        merged_df[column] = merged_df[column].str.replace(character, \"\")\n",
     "\n",
-    "\n",
-    "# Display the fixed DataFrame\n"
+    "# Display the fixed DataFrame\n",
+    "merged_df"
    ]
   },
   {
@@ -3383,7 +3435,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop \"byline.person\" column\n"
+    "# Drop \"byline.person\" column\n",
+    "merged_df = merged_df.drop(columns=[\"byline.person\"])"
    ]
   },
   {
@@ -3627,7 +3680,9 @@
     }
    ],
    "source": [
-    "# Delete duplicate rows and reset index\n"
+    "# Delete duplicate rows and reset index\n",
+    "merged_df = merged_df.drop_duplicates().reset_index(drop=True)\n",
+    "merged_df.head()"
    ]
   },
   {
@@ -3636,7 +3691,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export data to CSV without the index\n"
+    "# Export data to CSV without the index\n",
+    "merged_df.to_csv(\"output_data/nyt_movie_reviews.csv\", index=False)"
    ]
   },
   {
